Create function for filters

--- a/ToDo
+++ b/ToDo
@@ -1,7 +1,7 @@
-Changer portraits photographers
-box shadow portraits
+Changer les photos
+box shadow portraits ?
 alt pour portrait ?
 filtrer les photographes
 title page photographe
 balises aria
-to main
+sports//sport
