Begin to create photographer page

--- a/ToDo
+++ b/ToDo
@@ -1,7 +1,8 @@
 Changer les photos
 box shadow portraits ?
 alt pour portrait ?
-filtrer les photographes
 title page photographe
 balises aria
-sports//sport
+.parentNode.parentNode.parentNode
+
+cliquer sur filtre actif pour l'enlever
