Begin to create lightbox

--- a/ToDo
+++ b/ToDo
@@ -1,12 +1,14 @@
 
 box shadow portraits ?
 alt pour portrait ?
-title page photographe
 balises aria
 
 cliquer sur filtre actif pour l'enlever
-filtres dynamiques
 
-picture.src = "../images/pictures/Mimi/" + media[i].image;
 voir pour les vidéos
-premiere photo en derniere ?
+
+sortBy en js ?
+
+compression photo
+
+figcaption
