--- a/ToDo
+++ b/ToDo
@@ -1,19 +1,29 @@
+Choix portrait ?
 
-box shadow portraits ?
+box shadow portraits à revoir
 alt pour portrait ?
 balises aria
-
-cliquer sur filtre actif pour l'enlever
-
 voir pour les vidéos
-
 sortBy en js ?
-
-compression photo
-
 figcaption
-
-max and min width pictures ?
-
+max and min width pictures ligthbox?
 icones ?? text ?? vector ??
+
+■ Vidéos, montrer une image miniature dans la galerie.
+
+■ Lorsque l'utilisateur clique sur l'icône "Like", ça incrémente le nombre
+de likes affiché.
+■ Le nombre total de clichés doit être compté et ajouté au total du profil
+du photographe.
+○ Les médias peuvent être triés par popularité, date ou titre.
+
+■ Des boutons de navigation permettent de passer d'un élément média
+à l'autre (les utilisateurs peuvent cliquer sur ces boutons pour
+naviguer).
+■ Les touches fléchées permettent également de naviguer entre les
+médias.
+
+■ Plus tard, le bouton de contact enverra un message au photographe.
+Pour l'instant, seulement afficher le contenu des trois champs dans
+les logs de la console.
 
