--- a/ToDo
+++ b/ToDo
@@ -1,21 +1,10 @@
-Choix portrait ?
 
-box shadow portraits à revoir
 alt pour portrait ?
 balises aria
-voir pour les vidéos
 sortBy en js ?
-figcaption
-max and min width pictures ligthbox?
-icones ?? text ?? vector ??
 
-■ Vidéos, montrer une image miniature dans la galerie.
 
-■ Lorsque l'utilisateur clique sur l'icône "Like", ça incrémente le nombre
-de likes affiché.
-■ Le nombre total de clichés doit être compté et ajouté au total du profil
-du photographe.
-○ Les médias peuvent être triés par popularité, date ou titre.
+filtrer image avec tags page photographe
 
 ■ Des boutons de navigation permettent de passer d'un élément média
 à l'autre (les utilisateurs peuvent cliquer sur ces boutons pour
@@ -23,7 +12,5 @@ naviguer).
 ■ Les touches fléchées permettent également de naviguer entre les
 médias.
 
-■ Plus tard, le bouton de contact enverra un message au photographe.
-Pour l'instant, seulement afficher le contenu des trois champs dans
-les logs de la console.
 
+ajout d'un champ JSON pour la description de chaque image (pour les lecteurs d'écran).
