--- a/ToDo
+++ b/ToDo
@@ -1,16 +1,9 @@
+video title ou alt ?
 
+titre sous video
 balises aria
 sortBy en js ?
 form version mobile
 photo page photographe version mobile
 
-
-
-version tablette ?
-photographer.html?id=243:1 Uncaught ReferenceError: formValidation is not defined
-    at HTMLFormElement.onsubmit (photographer.html?id=243:1)
-
-    centrage des photos ??
-
-
-pb filtre et trie // preventDefault travel -> events
+coeur vide
